--- a/index.html
+++ b/index.html
@@ -8,14 +8,38 @@
     <title>Jumpstart</title>
     <link rel="icon" href="./resources/images/favicon.png" type="image/x-icon">
     <!-- Custom Fonts -->
-
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Slick CSS -->
+    <!-- <link rel="stylesheet" href="./resources/css/slick.css"/> -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Explore</a></li>
+            <li><a href="#">Start a project</a></li>
+            <li><a href="#">About us</a></li>
+          </ul>
+          <a class="navbar-brand navbar-right" href="#"><img src="./resources/images/logo.png" alt="Jumpstart logo"></a>
+      </div>
+    </nav>
+    <!-- Jumbotron Section -->
+    <section class="jumbotron jumbotron-bike">
+      <div class="container-fluid text-center">
+        <h1>Get Going</h1>
+        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+      </div>
 
+    </section>
+    <!-- Javascript -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./resources/slick/slick.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.min.js"></script>
+    <script type="text/javascript" src="./resources/js/main.js"></script>
   </body>
 </html>
