Update html to include all content on site and start styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#">Start a project</a></li>
             <li><a href="#">About us</a></li>
           </ul>
-          <a class="navbar-brand navbar-right" href="#"><img src="./resources/images/logo.png" alt="Jumpstart logo"></a>
+          <a class="navbar-brand navbar-right collapse navbar-collapse" href="#"><img src="./resources/images/logo.png" alt="Jumpstart logo"></a>
       </div>
     </nav>
     <!-- Jumbotron Section -->
@@ -33,8 +33,79 @@
       <div class="container-fluid text-center">
         <h1>Get Going</h1>
         <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+        <button type="button" class="btn btn-primary btn-lg">Jump in</button>
       </div>
-
+    </section>
+    <!-- Featured Project Section -->
+    <section class="container featured-project">
+      <h2>Featured project</h2>
+      <div class="row">
+        <div class="col-md-6 image-container">
+          <img class="img-responsive center-block" src="./resources/images/featured-project.png" alt="Barn in snowy mountains">
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <h3>DeFrost: A Documentary</h3>
+          <p>by Leo De Firenze</p>
+          <p>DeFrost is a documentary about growing up in a little red house in a cold, harsh valley. This is a story about my mother's childhood. This film attempts to capture vignettes of her upbringing - her family, friends, pets, and eventual depature from a freezing valley in Northern Italy - through beautiful cinematography and narration.</p>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <h3>Product Categories</h3>
+          <ul>
+            <li>Art</li>
+            <li>Books</li>
+            <li>Crystals</li>
+            <li>Design</li>
+            <li>Doodles</li>
+            <li>Deedlybobs</li>
+            <li>Farming</li>
+            <li>Gadgets</li>
+            <li>Hoverboards</li>
+            <li>Jams, Jellies, Etc.</li>
+            <li>Magazines</li>
+            <li>Plants</li>
+            <li>Snakes &amp; Snake Equipment</li>
+            <li>Tables</li>
+            <li>Ventriliquist Figures</li>
+            <li>Yoyos</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- Projects Section -->
+    <section class="container projects">
+      <h2>Projects</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="image-container">
+            <img src="./resources/images/project1.png" alt="Person wearing a Henddrix tank top">
+          </div>
+          <h3>The Right Tights</h3>
+          <p>by Riley Mae</p>
+          <p>These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.</p>
+        </div>
+        <div class="col-md-4">
+          <div class="image-container">
+            <img src="./resources/images/project2.png" alt="Light colored living room">
+          </div>
+          <h3>Peppermint Smart Home</h3>
+          <p>by Brian McDonald</p>
+          <p>Instantly upgrade your home with technology that keeps your family and home safe. We've made Peppermint easy to use. Just talk to your phone and Peppermint will help you every step of the way.</p>
+        </div>
+        <div class="col-md-4">
+          <div class="image-container">
+            <img src="./resources/images/project3.png" alt="Neon sign">
+          </div>
+          <h3>American Streetlife</h3>
+          <p>by Patrick Wallace</p>
+          <p>I've been traveling around the United States for the past two years. I've slept on hundreds of couches, more than a few benches, and captured my experiences in this 120 page photo album.</p>
+        </div>
+      </div>
+    </section>
+    <!-- Having Trouble Section -->
+    <section class="container-fluid text-center having-trouble">
+      <h1>Having trouble thinking of an idea?</h1>
+      <p>Inventors’ block strikes at the worst times. But that’s all changed with Jumpstart’s Good Idea Generator Lite (GIGLi).</p>
+      <button type="button" class="btn btn-primary btn-lg">Learn more</button>
     </section>
     <!-- Javascript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
