Finish styling and add transitions using css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./resources/css/slick.css"/> -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css">
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
@@ -31,7 +31,7 @@
     <!-- Jumbotron Section -->
     <section class="jumbotron jumbotron-bike">
       <div class="container-fluid text-center">
-        <h1>Get Going</h1>
+        <h1>Get Going.</h1>
         <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
         <button type="button" class="btn btn-primary btn-lg">Jump in</button>
       </div>
@@ -41,7 +41,7 @@
       <h2>Featured project</h2>
       <div class="row">
         <div class="col-md-6 image-container">
-          <img class="img-responsive center-block" src="./resources/images/featured-project.png" alt="Barn in snowy mountains">
+          <a href="#"><img class="img-responsive center-block" src="./resources/images/featured-project.png" alt="Barn in snowy mountains"></a>
         </div>
         <div class="col-md-3 col-xs-6">
           <h3>DeFrost: A Documentary</h3>
@@ -49,7 +49,7 @@
           <p>DeFrost is a documentary about growing up in a little red house in a cold, harsh valley. This is a story about my mother's childhood. This film attempts to capture vignettes of her upbringing - her family, friends, pets, and eventual depature from a freezing valley in Northern Italy - through beautiful cinematography and narration.</p>
         </div>
         <div class="col-md-3 col-xs-6">
-          <h3>Product Categories</h3>
+          <h3 class="product-categories">Product Categories</h3>
           <ul>
             <li>Art</li>
             <li>Books</li>
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="image-container">
-            <img src="./resources/images/project1.png" alt="Person wearing a Henddrix tank top">
+            <a href="#"><img class="img-responsive center-block" src="./resources/images/project1.png" alt="Person wearing a Henddrix tank top"></a>
           </div>
           <h3>The Right Tights</h3>
           <p>by Riley Mae</p>
@@ -85,7 +85,7 @@
         </div>
         <div class="col-md-4">
           <div class="image-container">
-            <img src="./resources/images/project2.png" alt="Light colored living room">
+            <a href="#"><img class="img-responsive center-block" src="./resources/images/project2.png" alt="Light colored living room"></a>
           </div>
           <h3>Peppermint Smart Home</h3>
           <p>by Brian McDonald</p>
@@ -93,7 +93,7 @@
         </div>
         <div class="col-md-4">
           <div class="image-container">
-            <img src="./resources/images/project3.png" alt="Neon sign">
+            <a href="#"><img class="img-responsive center-block" src="./resources/images/project3.png" alt="Neon sign"></a>            
           </div>
           <h3>American Streetlife</h3>
           <p>by Patrick Wallace</p>
@@ -109,8 +109,8 @@
     </section>
     <!-- Javascript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./resources/slick/slick.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.min.js"></script>
+    <!-- <script type="text/javascript" src="./resources/slick/slick.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
     <script type="text/javascript" src="./resources/js/main.js"></script>
   </body>
 </html>
