--- a/index.html
+++ b/index.html
@@ -29,13 +29,37 @@
       </div>
     </nav>
     <!-- Jumbotron Section -->
-    <section class="jumbotron jumbotron-bike">
-      <div class="container-fluid text-center">
-        <h1>Get Going.</h1>
-        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
-        <button type="button" class="btn btn-primary btn-lg">Jump in</button>
+    <section class="carousel">
+      <div class="jumbotron jumbotron-bike">
+        <div class="container-fluid text-center">
+          <h1>GET GOING.</h1>
+          <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+          <button type="button" class="btn btn-primary btn-lg">Jump in</button>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-beer">
+        <div class="container-fluid text-center">
+          <h1>GET THINKING.</h1>
+          <p>Meet like-minded individuals who will help fuel your creative juices.</p>
+          <button type="button" class="btn btn-primary btn-lg">Jump in</button>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-flowers">
+        <div class="container-fluid text-center">
+          <h1>GET CREATING.</h1>
+          <p>Stop overthinking projects and begin putting them out into the world.</p>
+          <button type="button" class="btn btn-primary btn-lg">Jump in</button>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-duffel">
+        <div class="container-fluid text-center">
+          <h1>GET STARTED.</h1>
+          <p>What are you waiting for? Today's the day for your next big idea.</p>
+          <button type="button" class="btn btn-primary btn-lg">Jump in</button>
+        </div>
       </div>
     </section>
+
     <!-- Featured Project Section -->
     <section class="container featured-project">
       <h2>Featured project</h2>
@@ -93,7 +117,7 @@
         </div>
         <div class="col-md-4">
           <div class="image-container">
-            <a href="#"><img class="img-responsive center-block" src="./resources/images/project3.png" alt="Neon sign"></a>            
+            <a href="#"><img class="img-responsive center-block" src="./resources/images/project3.png" alt="Neon sign"></a>
           </div>
           <h3>American Streetlife</h3>
           <p>by Patrick Wallace</p>
